<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/degree_subcutaneous_fat_text_title"
        android:text="@string/degree_subcutaneous_fat_text_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/degree_subcutaneous_fat_radio_group"
        app:layout_constraintTop_toBottomOf="@id/degree_subcutaneous_fat_text_title"
        app:layout_constraintLeft_toLeftOf="@id/degree_subcutaneous_fat_text_title"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" >

        <RadioButton
            android:id="@+id/degree_subcutaneous_fat_one_radio_button"
            android:text="@string/degree_subcutaneous_fat_one_radio_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/degree_subcutaneous_fat_two_radio_button"
            android:text="@string/degree_subcutaneous_fat_two_radio_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/degree_subcutaneous_fat_three_radio_button"
            android:text="@string/degree_subcutaneous_fat_three_radio_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/degree_subcutaneous_fat_four_radio_button"
            android:text="@string/degree_subcutaneous_fat_four_radio_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>