<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/x_ray_contrast_stone_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/x_ray_contrast_stone"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/calcium_oxalate_dihydrate_checkbox"
        app:layout_constraintTop_toBottomOf="@id/x_ray_contrast_stone_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/calcium_oxalate_dihydrate_checkbox_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/calcium_oxalate_monohydrate_checkbox"
        app:layout_constraintTop_toBottomOf="@id/calcium_oxalate_dihydrate_checkbox"
        app:layout_constraintLeft_toLeftOf="@id/calcium_oxalate_dihydrate_checkbox"
        android:text="@string/calcium_oxalate_monohydrate_checkbox_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/calcium_phosphate_checkbox"
        app:layout_constraintTop_toBottomOf="@id/calcium_oxalate_monohydrate_checkbox"
        app:layout_constraintLeft_toLeftOf="@id/calcium_oxalate_monohydrate_checkbox"
        android:text="@string/calcium_phosphate_checkbox_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>